--- a/UI/styles/view_property.css
+++ b/UI/styles/view_property.css
@@ -153,12 +153,7 @@ margin: 25px;
           margin: 0 auto;
           width: fit-content;
       }
-       .map-wrapper img{
-            margin: 0 auto;
-            display: block;
-            width: 80%;
-            height:50%;
-        }
+       
      .report-ad{
          display: block;
          margin: 0 auto;
@@ -238,6 +233,16 @@ margin: 25px;
         background: rgba(238, 233, 233, 0.438);
         outline: none;
     }
+    .mapouter{
+    position:relative;
+    text-align:right;
+    height:500px;
+    width:600px;}
+    .gmap_canvas{
+    overflow:hidden;
+    background:none!important;
+    height:500px;width:600px;
+}
       @media screen and (max-width:1230px){
      
         .email-user span{
